--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/operator-cluster-role.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/templates/operator-cluster-role.yaml
@@ -27,6 +27,7 @@ rules:
       - rolebindings
       - events
       - cronjobs
+      - persistentvolumeclaims
       - jobs
     verbs:
       - get
@@ -60,6 +61,7 @@ rules:
       - sgshardedbackups
       - sgshardeddbops
       - sgconfigs
+      - sgconfigs/status
     verbs:
       - create
       - watch
@@ -71,38 +73,8 @@ rules:
   - apiGroups:
       - stackgres.io
     resources:
-      - sgconfigs/status
       - sgclusters/status
       - sgdistributedlogs/status
-      - sgclusters/finalizers
-      - sgpgconfigs/finalizers
-      - sginstanceprofiles/finalizers
-      - sgpoolconfigs/finalizers
-      - sgbackupconfigs/finalizers
-      - sgbackups/finalizers
-      - sgdistributedlogs/finalizers
-      - sgdbops/finalizers
-      - sgobjectstorages/finalizers
-      - sgscripts/finalizers
-      - sgshardedclusters/finalizers
-      - sgshardedbackups/finalizers
-      - sgshardeddbops/finalizers
-      - sgconfigs/finalizers
-    verbs:
-      - update
-  - apiGroups:
-      - ''
-      - apps
-      - batch
-    resources:
-      - statefulsets/finalizers
-      - persistentvolumeclaims/finalizers
-      - deployments/finalizers
-      - services/finalizers
-      - endpoints/finalizers
-      - cronjobs/finalizers
-      - jobs/finalizers
-      - pods/finalizers
     verbs:
       - update
   - apiGroups:
@@ -132,15 +104,6 @@ rules:
       - customresourcedefinitions
     verbs:
       - list
-  - apiGroups:
-      - snapshot.storage.k8s.io
-    resources:
-      - volumesnapshots
-    verbs:
-      - list
-      - get
-      - watch
-      - create
   - apiGroups:
       - apiextensions.k8s.io
     resourceNames:
@@ -213,4 +176,3 @@ rules:
       - customresourcedefinitions
     verbs:
       - patch
-      - update
