Add postprocessing for sgconfig object to prune null values
Signed-off-by: Nicolas Bigler <nicolas.bigler@vshn.ch>

--- a/class/stackgres-operator.yml
+++ b/class/stackgres-operator.yml
@@ -31,3 +31,6 @@ parameters:
         - type: jsonnet
           filter: postprocess/fix_null_entries.jsonnet
           path: ${_instance}/01_helmchart/stackgres-operator/crds
+        - type: jsonnet
+          filter: postprocess/fix_sgconfig_null_entries.jsonnet
+          path: ${_instance}/01_helmchart/stackgres-operator/templates
