--- a/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/crds/SGShardedCluster.yaml
+++ b/tests/golden/defaults/stackgres-operator/stackgres-operator/01_helmchart/stackgres-operator/crds/SGShardedCluster.yaml
@@ -104,6 +104,12 @@ spec:
 
                               If not set, full backups are never performed automatically.
                             type: string
+                          fastVolumeSnapshot:
+                            description: |
+                              If specified SGBackup will create a backup forcing a fast start (by setting parameter `fast` to `true` when calling `pg_backup_start`) that will reduce the time the backups may take at the expense of more IO usage.
+
+                              See also https://www.postgresql.org/docs/current/continuous-archiving.html#BACKUP-LOWLEVEL-BASE-BACKUP
+                            type: boolean
                           paths:
                             description: |
                               The paths were the backups are stored. If not set this field is filled up by the operator.
@@ -154,6 +160,20 @@ spec:
                           sgObjectStorage:
                             description: |
                               Name of the [SGObjectStorage](https://stackgres.io/doc/latest/reference/crd/sgobjectstorage) to use for the cluster. It defines the location in which the the backups will be stored.
+                            type: string
+                          useVolumeSnapshot:
+                            description: |
+                              If specified SGBackup will use VolumeSnapshot to create backups.
+
+                              This functionality still require to store WAL files in an SGObjectStorage but could result in much faster backups and restore of those backups.
+
+                              See also https://kubernetes.io/docs/concepts/storage/volume-snapshots/
+                            type: boolean
+                          volumeSnapshotClass:
+                            description: |
+                              The name of the VolumeSnaphostClass to use to create the VolumeSnapshot for backups.
+
+                              See also https://kubernetes.io/docs/concepts/storage/volume-snapshots/
                             type: string
                         required:
                           - sgObjectStorage
@@ -371,6 +391,52 @@ spec:
                       description: |
                         Coordinator custom configurations.
                       properties:
+                        patroni: &id008
+                          description: Allow to specify Patroni configuration that
+                            will extend the generated one
+                          properties:
+                            dynamicConfig:
+                              description: |
+                                Allow to specify Patroni dynamic configuration that will overwrite the generated one. See https://patroni.readthedocs.io/en/latest/dynamic_configuration.html
+
+                                The following configuration fields will be ignored:
+
+                                * synchronous_mode
+                                * synchronous_mode_strict
+                                * failsafe_mode
+                                * postgresql
+                                * standby_cluster
+                              type: object
+                              x-kubernetes-preserve-unknown-fields: true
+                            initialConfig:
+                              description: |
+                                Allow to specify Patroni configuration that will overwrite the generated one. See https://patroni.readthedocs.io/en/latest/yaml_configuration.html
+
+                                The following configuration fields will be ignored:
+
+                                * name
+                                * namespace
+                                * scope
+                                * log
+                                * bootstrap
+                                * consul
+                                * citus
+                                * etcd
+                                * etcdv3
+                                * zookeeper
+                                * exhibitor
+                                * kubernetes
+                                * raft
+                                * postgresql
+                                * restapi
+                                * ctl
+                                * watchdog
+                                * tags
+
+                                **This field can only be set on creation.**
+                              type: object
+                              x-kubernetes-preserve-unknown-fields: true
+                          type: object
                         sgPoolingConfig:
                           description: |
                             Name of the [SGPoolingConfig](https://stackgres.io/doc/latest/reference/crd/sgpoolconfig) used for this cluster. Each pod contains a sidecar with a connection pooler (currently: [PgBouncer](https://www.pgbouncer.org/)). The connection pooler is implemented as a sidecar.
@@ -1844,7 +1910,7 @@ spec:
                               **Changing this field may require a restart.**
 
                               See: https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.25/#volume-v1-core
-                            properties: &id008
+                            properties: &id009
                               configMap:
                                 description: |-
                                   Adapts a ConfigMap into a volume.
@@ -2627,7 +2693,7 @@ spec:
                                 **Changing this field may require a restart.**
                               type: boolean
                           type: object
-                        scheduling: &id009
+                        scheduling: &id010
                           description: |
                             Pod custom scheduling, affinity and topology spread constratins configuration.
 
@@ -4691,7 +4757,7 @@ spec:
                   description: |
                     If enabled, a ServiceMonitor is created for each Prometheus instance found in order to collect metrics.
                   type: boolean
-                replication: &id010
+                replication: &id011
                   description: |
                     This section allows to configure the global Postgres replication mode.
 
@@ -4786,6 +4852,7 @@ spec:
                       description: |
                         Shards custom configurations.
                       properties:
+                        patroni: *id008
                         sgPoolingConfig:
                           description: |
                             Name of the [SGPoolingConfig](https://stackgres.io/doc/latest/reference/crd/sgpoolconfig) used for this cluster. Each pod contains a sidecar with a connection pooler (currently: [PgBouncer](https://www.pgbouncer.org/)). The connection pooler is implemented as a sidecar.
@@ -5110,7 +5177,7 @@ spec:
                                     **Changing this field may require a restart.**
 
                                     See: https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.25/#volume-v1-core
-                                  properties: *id008
+                                  properties: *id009
                                   type: object
                                 type: array
                               disableConnectionPooling:
@@ -5171,9 +5238,9 @@ spec:
                                       **Changing this field may require a restart.**
                                     type: boolean
                                 type: object
-                              scheduling: *id009
+                              scheduling: *id010
                             type: object
-                          replication: *id010
+                          replication: *id011
                           sgInstanceProfile:
                             description: |
                               Name of the [SGInstanceProfile](https://stackgres.io/doc/latest/04-postgres-cluster-management/03-resource-profiles/). A SGInstanceProfile defines CPU and memory limits. Must exist before creating a cluster. When no profile is set, a default (currently: 1 core, 2 GiB RAM) one is used.
@@ -5275,7 +5342,7 @@ spec:
                               **Changing this field may require a restart.**
 
                               See: https://kubernetes.io/docs/reference/generated/kubernetes-api/v1.25/#volume-v1-core
-                            properties: *id008
+                            properties: *id009
                             type: object
                           type: array
                         disableConnectionPooling:
@@ -5337,11 +5404,11 @@ spec:
                                 **Changing this field may require a restart.**
                               type: boolean
                           type: object
-                        scheduling: *id009
+                        scheduling: *id010
                       required:
                         - persistentVolume
                       type: object
-                    replication: *id010
+                    replication: *id011
                     sgInstanceProfile:
                       description: |
                         Name of the [SGInstanceProfile](https://stackgres.io/doc/latest/reference/crd/sginstanceprofile/).
